[gd_scene load_steps=17 format=3 uid="uid://brfkvcpn8p2cf"]

[ext_resource type="Script" path="res://Scenes/red_ball.gd" id="1_e64mu"]
[ext_resource type="Texture2D" uid="uid://vila7vl5p83k" path="res://Art/redBallAnimation/Hit/Hit2.png" id="2_7njix"]
[ext_resource type="Texture2D" uid="uid://ikbjgwyscqld" path="res://Art/redBallAnimation/Hit/Hit3.png" id="3_w7w37"]
[ext_resource type="Texture2D" uid="uid://ionmcdxjj2am" path="res://Art/redBallAnimation/Hit/Hit4.png" id="4_pt0lf"]
[ext_resource type="Texture2D" uid="uid://bh4014ajvrlup" path="res://Art/redBallAnimation/Hit/Hit5.png" id="5_wkqlj"]
[ext_resource type="Texture2D" uid="uid://cfvng0gnisteg" path="res://Art/redBallAnimation/Hit/hit1.png" id="6_67qjh"]
[ext_resource type="AudioStream" uid="uid://cbr82oiadfk4i" path="res://Art/Sounds/bigPew.wav" id="7_6rkpy"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_vgp2c"]
bounce = 1.0

[sub_resource type="SpriteFrames" id="SpriteFrames_vsxvf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7njix")
}, {
"duration": 5.0,
"texture": ExtResource("3_w7w37")
}, {
"duration": 5.0,
"texture": ExtResource("4_pt0lf")
}, {
"duration": 100.0,
"texture": ExtResource("5_wkqlj")
}, {
"duration": 1.0,
"texture": ExtResource("6_67qjh")
}],
"loop": true,
"name": &"ComboHit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7njix")
}, {
"duration": 1.0,
"texture": ExtResource("3_w7w37")
}, {
"duration": 1.0,
"texture": ExtResource("4_pt0lf")
}, {
"duration": 6.0,
"texture": ExtResource("5_wkqlj")
}, {
"duration": 1.0,
"texture": ExtResource("6_67qjh")
}],
"loop": false,
"name": &"Hit",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bhvps"]
radius = 155.0

[sub_resource type="CircleShape2D" id="CircleShape2D_egqu0"]
radius = 176.003

[sub_resource type="Curve" id="Curve_8chmc"]
min_value = -1.0
_data = [Vector2(0.0333333, -0.230769), 0.0, 0.0, 0, 0, Vector2(0.606667, 0.450549), 0.0, 0.0, 0, 0, Vector2(1, 0.252747), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_b6mut"]
curve = SubResource("Curve_8chmc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4byqi"]
lifetime_randomness = 0.77
particle_flag_rotate_y = true
particle_flag_disable_z = true
emission_shape_scale = Vector3(30, 30, 0)
emission_shape = 1
emission_sphere_radius = 1.0
angle_min = -275.1
angle_max = 113.3
velocity_pivot = Vector3(1, 1, 10)
direction = Vector3(0, 0, 0)
initial_velocity_min = 67.42
initial_velocity_max = 179.78
angular_velocity_max = 275.06
orbit_velocity_max = 0.225
radial_velocity_min = -22.48
radial_velocity_max = 22.47
gravity = Vector3(0, 0, 0)
linear_accel_min = 21.98
linear_accel_max = 44.95
radial_accel_min = 20.22
radial_accel_max = 67.41
tangential_accel_min = 24.72
tangential_accel_max = 98.88
damping_max = 8.989
scale_min = 5.0
scale_max = 7.0
hue_variation_min = -1.0
hue_variation_max = -0.56
hue_variation_curve = SubResource("CurveTexture_b6mut")
turbulence_enabled = true
turbulence_noise_strength = 10.53
turbulence_noise_scale = 0.946
turbulence_initial_displacement_min = -10.5
turbulence_initial_displacement_max = 67.4

[sub_resource type="Gradient" id="Gradient_drdyg"]
colors = PackedColorArray(0.835294, 0, 0, 1, 1, 0.337255, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8vqpw"]
gradient = SubResource("Gradient_drdyg")
width = 1

[node name="RedBall" type="StaticBody2D"]
physics_material_override = SubResource("PhysicsMaterial_vgp2c")
script = ExtResource("1_e64mu")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vsxvf")
animation = &"ComboHit"
speed_scale = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_bhvps")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_egqu0")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_6rkpy")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 150
amount_ratio = 0.6096
process_material = SubResource("ParticleProcessMaterial_4byqi")
texture = SubResource("GradientTexture1D_8vqpw")
lifetime = 0.3
one_shot = true
explosiveness = 0.24
randomness = 0.65

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
